# dune-tms

./: CHANGELOG.md  CMakeLists.txt  Makefile  PackageConfig.cmake.in  README.md  Reco_Evaluation_Edit.ipynb  RunOverSeveralFiles.sh  chargeID.py  chargeID_simple.py  evaluation_NERSC_files.py  meson.build  performance_reco.py  plotting_NERSC_files.py  setup.sh  setup_FNAL.sh  setup_SL7.sh
.github/workflows/: c-cpp.yml
app/: BField_tester.cpp  CMakeLists.txt  CherryPickEvents.cpp  ConvertToTMSTree.cpp  DBSCAN_test.cpp  DrawEvents.cpp  Makefile  ShootRay.cpp  TrackLengthTester.cpp
config/: TMS_Default_Config.toml  TMS_Readout_Default_Config.toml
geom/: geom.cpp  geometry.root
scripts/EnergyResolution/: draw_crystal_ball.py  fit_resolution.py
scripts/EventDisplay/: EveDisplay.C
scripts/FlatTree/: dumpSSRITree.py  dumpSSRITree_geom.py  dumpSSRITree_geom_grid_Get.py  dumpSSRITree_grid.py  fill_histos.py  make_plots.py
scripts/FlatTree/scripts/: deposits.cpp  draw_1d.cpp  draw_dep.cpp  eff.cpp  validate_geom.cpp
scripts/Geom/: view_geom.cpp
scripts/Reco/: ._make_hists.py  Event_Display_Edit.py  ExPerformanceLineCandidates.cpp  ExPerformanceStartEnd.cpp  ExPerformanceXYZ.cpp  ExtrapolationPlotting.py  ExtrapolationPlotting_Comparative.py  RECO_plot.py  Reco_Evaluation_Edit.py  angle.cpp  compare_2_data_sets_performance.py  counttarget.cpp  draw_spill.py  draw_spill_3D_projections.py  draw_spill_copied.py  efficiency.cpp  efficiency_vs_muke.py  ehad.cpp  enuqe.cpp  evaluation_Reco_files.py  geometry_comparison.py  hadreco.cpp  make_hists.py  misid.py  misid_reco.py  misid_reco_method2.py  misid_reco_method2_upgrade0714.py  misid_reco_signed_dist_method.py  misid_truth_info.py  muonke.cpp  muonke_weights.cpp  muonke_weights_of.cpp  optimization_evaluation.py  performance_reco.py  plot_multiple_truth_efficiencies.py  plotting_RecoEvaluation_files.py  scattering_lar_tms.py  sign_distance_efficiency_vs_muon_true_ke.py  signed_distance_enu_momentum_slices.py  signed_distance_momentum_slices.py  (+4 more)
scripts/TTreeSlicer/: LArSlicer.C
scripts/TimeSlicer/: draw_spill.py
scripts/Truth/: plot_efficiency_vs_true_muonke.py  plot_multiple_truth_efficiencies.py  plot_multiple_truth_signed_distances.py  sign_distance_efficiency_vs_muon_true_ke.py  truth_signed_distance_enu_momentum_slices.py  truth_signed_distance_momentum_slices.py  truth_signed_distance_mu_momentum_slices.py
scripts/Validation/: Basic.cxx  BranchHists.cpp  Charge.cxx  CompareBranchHists.cpp  DrawSlice.cxx  EnergyResolution.cxx  EventRates.cxx  HistManager.cxx  HitInformation.cxx  Line_Candidates.h  Makefile  Plot_True_Track_Length  Plot_True_Track_Length.cpp  RecoEffIsolated.cpp  Reco_Eff.cxx  Reco_Tracks.cpp  Reco_Tree.h  TimeSlicing.cxx  Track_Resolution.cxx  Tracking_Validation.cpp  TruthVtx.cxx  Truth_Info.h  Truth_Spill.h  draw_comparison.py  draw_spill.py  print_event_rates.py  run_validation.sh  setup.sh  simply_draw_everything.py
src/: .giosave26aLmB  BField_Handler.cpp  BField_Handler.h  CMakeLists.txt  Makefile  Material.h  TMS_3DBlob.cpp  TMS_3DBlob.h  TMS_Bar.cpp  TMS_Bar.h  TMS_CAF_converter.cpp  TMS_CAF_converter.h  TMS_ChargeID.cpp  TMS_ChargeID.h  TMS_Constants.h  TMS_DBScan.h  TMS_Event.cpp  TMS_Event.h  TMS_EventViewer.cpp  TMS_EventViewer.h  TMS_Geom.h  TMS_Hit.cpp  TMS_Hit.h  TMS_Kalman.cpp  TMS_Kalman.h  TMS_Kalman_chargeID_negative.cpp  TMS_Kalman_chargeID_negative.h  TMS_Kalman_chargeID_positive.cpp  TMS_Kalman_chargeID_positive.h  TMS_Manager.cpp  TMS_Manager.h  TMS_ReadoutTreeWriter.cpp  TMS_ReadoutTreeWriter.h  TMS_Readout_Manager.cpp  TMS_Readout_Manager.h  TMS_Reco.cpp  TMS_Reco.h  TMS_Reco_Truth_Override.cpp  TMS_Reco_Truth_Override.h  TMS_TimeSlicer.cpp  (+12 more)
utils/: view_gdml_geom.cpp
