add_executable(BField_tester BField_tester.cpp)
add_executable(BetheBloch_Example BetheBloch_Example.cpp)
add_executable(CherryPickEvents CherryPickEvents.cpp)
add_executable(ConvertToTMSTree ConvertToTMSTree.cpp)
add_executable(DrawEvents DrawEvents.cpp)
add_executable(ShootRay ShootRay.cpp)
add_executable(TrackLengthTester TrackLengthTester.cpp)
add_executable(DBSCAN_test DBSCAN_test.cpp)

target_link_libraries(BField_tester LINK_PUBLIC TMS_Prod)
target_link_libraries(BetheBloch_Example LINK_PUBLIC TMS_Prod)
target_link_libraries(CherryPickEvents LINK_PUBLIC TMS_Prod)
target_link_libraries(ConvertToTMSTree LINK_PUBLIC TMS_Prod)
target_link_libraries(DrawEvents LINK_PUBLIC TMS_Prod)
target_link_libraries(ShootRay LINK_PUBLIC TMS_Prod)
target_link_libraries(TrackLengthTester LINK_PUBLIC TMS_Prod)
target_link_libraries(DBSCAN_test LINK_PUBLIC TMS_Prod)

install(TARGETS BField_tester RUNTIME DESTINATION bin)
install(TARGETS BetheBloch_Example RUNTIME DESTINATION bin)
install(TARGETS CherryPickEvents RUNTIME DESTINATION bin)
install(TARGETS ConvertToTMSTree RUNTIME DESTINATION bin)
install(TARGETS DrawEvents RUNTIME DESTINATION bin)
install(TARGETS ShootRay RUNTIME DESTINATION bin)
install(TARGETS TrackLengthTester RUNTIME DESTINATION bin)
install(TARGETS DBSCAN_test RUNTIME DESTINATION bin)
